projeto drogaria rodando perfeitamente

--- a/src/main/webapp/cadastrar.xhtml
+++ b/src/main/webapp/cadastrar.xhtml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="ISO-8859-1" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
@@ -6,16 +6,16 @@
 	
     xmlns:ui="http://java.sun.com/jsf/facelets">
 <h:head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Principal</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Cadastro</title>
 </h:head>
-	<h:body>
-	<h:form>
+<h:body>
+   <h:form>
 		<h:panelGrid columns="2">
-			<h:commandButton value="Cadastro" action="cadastrar.xhtml"/>
-			<h:commandButton value="Visualizar clientes cadastrados" action="#{clientes.visualizar}"/>
+			<h:outputLabel value="Nome: " />
+			<h:inputText maxlength="50" size="30" value="#{clientes.nome}" />
+			<h:commandButton value="Salvar" action = "#{clientes.cadastrar}"/>
 		</h:panelGrid>
 	</h:form>
-		
-	</h:body>
+</h:body>
 </html>
