--- a/src/main/webapp/clientes.xhtml
+++ b/src/main/webapp/clientes.xhtml
@@ -6,16 +6,10 @@
 	
     xmlns:ui="http://java.sun.com/jsf/facelets">
 <h:head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Principal</title>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+<title>Todos</title>
 </h:head>
 	<h:body>
-	<h:form>
-		<h:panelGrid columns="2">
-			<h:commandButton value="Cadastro" action="cadastrar.xhtml"/>
-			<h:commandButton value="Visualizar clientes cadastrados" action="#{clientes.visualizar}"/>
-		</h:panelGrid>
-	</h:form>
 		
 	</h:body>
 </html>
